--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "dependencies": {
-    "json-server": "^1.0.0-alpha.23"
-  },
   "name": "server",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "json-server -w -p 3005 data.json"
+    "start":"node index.js"
 
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "dependencies": {
+ 
+     "cors": "^2.8.5",
+    "json-serve": "^0.1.0",
+    "json-server": "^0.17.1"
+  }
 }
